# mtls-study

./: keygen.sh
id/: Dockerfile  README.md  caller.py  deploy.sh  receiver.py  requirements.txt
mtls-tunnel/: Cargo.toml  README.md  build.rs  build.sh  main.rs
mtls-tunnel/cert_generator/: Cargo.toml
mtls-tunnel/cert_generator/src/: main.rs
mtls-tunnel/proto/: tunnel.proto
sni/: Cargo.toml
spire/: Cargo.toml  GEMINI.md  README.md  demo_envoy.sh
spire/crates/attested-service/: Cargo.toml
spire/crates/attested-service/src/: main.rs
spire/crates/attested-service/src/agent/: mod.rs
spire/crates/ca-authority/: Cargo.toml
spire/crates/ca-authority/src/: main.rs
spire/crates/dns-registry/: Cargo.toml
spire/crates/dns-registry/src/: main.rs
spire/crates/proto-schema/: Cargo.toml  build.rs
spire/crates/proto-schema/proto/: attestation.proto  proxy.proto  registry.proto  workload.proto
spire/crates/proto-schema/src/: lib.rs
spire/envoy/: envoy.yaml
src/: main.rs
