[package]
name = "ez_mtls_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rcgen = "0.11.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
