[package]
name = "dns-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tokio = { version = "1.0", features = ["full"] }
proto-schema = { path = "../proto-schema" }
hickory-proto = "0.24"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
